--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <button type="submit" class="menu-toggle"></button>
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
-                <li><a href="#benefits">Benefits</a></li>
+                <li><a href="#ingredients">Benefits</a></li>
                 <li><a href="#testimonials">Testimonials</a></li>
                 <li><a href="#faq">FAQ</a></li>
             </ul>
