Added and styled slideshow images

--- a/index.html
+++ b/index.html
@@ -58,7 +58,12 @@
                 <h2>Ingredient Transparency</h2>
                 <div class="ingredients-grid">
                     <div class="image-slideshow">
-                        <img src="quinoa.jpg" alt="ingredients">
+                        <img src="quinoa.jpg" alt="quonia"
+                            class="slideshow-image active">
+                        <img src="lentils.jpg" alt="lentils"
+                            class="slideshow-image">
+                        <img src="natural.jpg" alt="natural flavor"
+                            class="slideshow-image">
                     </div>
                     <div class="ingredients-list">
                         <p>Our snacks are made from:</p>
