Add style for newsletter

--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
 
             <section id="newsletter" class="newsletter">
                 <h2>Get Early Access</h2>
-                <p>Sign up for early access. Be the first to try PlantFuel when
-                    it launches!</p>
+                <p><b>Sign up for early access. Be the first to try PlantFuel when
+                    it launches!</b></p>
                 <form id="signup-form">
                     <input type="email" placeholder="Enter your email" required>
                     <button type="submit">Signup</button>
