Add style for footer section

--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
                     <div class="ingredients-list">
                         <p>Our snacks are made from:</p>
                         <ul>
-                            <li>Lentils - for high protein and fiber</li>
-                            <li>Quinoa - a complete plant protein</li>
-                            <li>Natural flavors - derived from real foods like
+                            <li><strong>Lentils</strong> - for high protein and fiber</li>
+                            <li><strong>Quinoa</strong> - a complete plant protein</li>
+                            <li><strong>Natural flavors</strong> - derived from real foods like
                                 berries and spices</li>
                         </ul>
                     </div>
