Add event handler for mobile menu toggle

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <h1 id="headline">Fuel your fitness-sustainably</h1>
                     <h4 id="subtitle">Fuel your fitness naturally with
                         plant-based power</h4>
-                    <a href="#signup" class="cta-btn">Join Early Access</a>
+                    <a href="#newsletter" class="cta-btn">Join Early Access</a>
                 </div>
 
                 <img src="plant-based.png" alt="plant-based" class="hero-img">
@@ -129,5 +129,7 @@
         <footer class="footer">
             <p>&copy; 2025 PlantFuel. All rights reserved.</p>
         </footer>
+
+        <script src="scripts/main.js"></script>
     </body>
 </html>
