Added toggle menu bar

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <header class="header">
             <nav class="nav-bar">
                 <div class="logo">PlantFuel</div>
-                <button type="submit" class="menu-toggle"></button>
+                <button class="menu-toggle" aria-label="Toggle menu">☰</button>
                 <ul class="nav-links">
                     <li><a href="#about">About</a></li>
                     <li><a href="#ingredients">Benefits</a></li>
@@ -29,12 +29,12 @@
                     <a href="#newsletter" class="cta-btn">Join Early Access</a>
                 </div>
 
-                <img src="plant-based.png" alt="plant-based" class="hero-img">
+                <img src="assets/images/plant-based.png" alt="plant-based" class="hero-img">
             </section>
 
             <section class="about" id="about">
                 <h2>Why Choose PlantFuel?</h2>
-                <img src="gym-goer.png" alt="gym-goer">
+                <img src="assets/images/gym-goer.png" alt="gym-goer">
                 <div class="grid">
                     <div class="feature">
                         <h3>Performance-Driven</h3>
@@ -58,11 +58,13 @@
                 <h2>Ingredient Transparency</h2>
                 <div class="ingredients-grid">
                     <div class="image-slideshow">
-                        <img src="quinoa.jpg" alt="quonia"
+                        <img src="assets/images/Qui-noa.jpg" alt="quonia"
                             class="slideshow-image active">
-                        <img src="lentils.jpg" alt="lentils"
+                        <img src="assets/images/lentils.jpg" alt="lentils"
                             class="slideshow-image">
-                        <img src="natural.jpg" alt="natural flavor"
+                        <img src="assets/images/strawberry.jpg" alt="berries"
+                            class="slideshow-image">    
+                        <img src="assets/images/spices.jpg" alt="natural flavor"
                             class="slideshow-image">
                     </div>
                     <div class="ingredients-list">
@@ -121,7 +123,7 @@
                 <form id="signup-form">
                     <input type="email" placeholder="Enter your email" required>
                     <button type="submit">Signup</button>
-                    <p class="form-message"></p>
+                    <p class="message"></p>
                 </form>
             </section>
         </main>
